fix(untis): table is versioned